--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ ul {
     padding: 1px 8px 12px 50px;
     font-size:17px;
     font-style:inherit;
-    align-items:initial;
+    align-items:space-between;
     position:absolute;
 
 }
@@ -89,8 +89,9 @@ li {
 
 .task-checkbox {
     cursor: pointer;
-    size: 15cm;
-
+    width:10px;
+    height:10px;
+    transform:scale(1.5);
 }
 
 
@@ -110,13 +111,14 @@ li {
     color: white;
     border: none;
     padding: 4px 4px;
-    border-radius: 5px;
+    border-radius: 2px;
     cursor: pointer;
+    margin-left:10px ;
 }
 
 .delete-btn:hover {
     background: darkred;
 }
 .listcontainer{
-    background-color: rgb(113, 121, 177);;
+    background-color: rgb(212, 213, 225);;
 }
